--- a/docs/css/dark-base.css
+++ b/docs/css/dark-base.css
@@ -163,6 +163,22 @@ li .input-field{
   box-shadow: 0 1px 0 0 rgba(255, 167, 38, 0.5);  
 }
 
+/* --[footer]-- */
+footer{
+  background-color: #222222!important;
+  padding:0!important;
+}
+.page-footer .footer-copyright{
+  background-color: rgba(0,0,0,0.0);
+}
+.page-footer ul{
+  margin:0;
+  padding:0;
+}
+.page-footer li{
+  display: inline;
+  margin-left: 15px;
+}
 
 /* --[main pagination]-- */
 .container {
